# deta

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  debug_deta.py  deta.yaml.example  goal.yaml  index.html  infra-graph.mmd  infra-graph.yaml  infra-map.json  infra.toon.yaml  pyproject.toml  scan-infra.sh
deta/: __init__.py  cli.py  config.py  core.py
deta/builder/: __init__.py  cache.py  topology.py
deta/dsl/: __init__.py  commands.py
deta/formatter/: __init__.py  graph.py  toon.py
deta/integration/: __init__.py  semcod.py
deta/monitor/: __init__.py  alerter.py  prober.py  watcher.py
deta/scanner/: __init__.py  compose.py  env.py  npm.py  openapi.py  ports.py  python.py
deta/web/: __init__.py  app.py
examples/anomalies/hardcoded-secrets/: docker-compose.yml
examples/anomalies/missing-healthcheck/: docker-compose.yml
examples/anomalies/port-conflict/: docker-compose.yml
examples/basic/api-stack/: docker-compose.yml
examples/env-driven/: docker-compose.yml
examples/microservices/: docker-compose.yml
examples/multi-module/: docker-compose.yml
examples/multi-module/connect/: docker-compose.yml
examples/multi-module/worker/: docker-compose.yml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_cache.py  test_compose_env.py  test_dsl.py  test_e2e_scan.py  test_env.py  test_monitor_ports.py  test_ports.py  test_wup.py
